modify: added auth and user controllers

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings":{
-    "DefaultConnection":"Data Source=.db"
+    "DefaultConnection":"Data Source=Tickets.db"
   },
   "Logging": {
     "LogLevel": {
